# rbd-engine

./: .gitignore  CMakeLists.txt  README.md  simscape_reference_data.csv  validation_report.md
include/rbd/: DataLogger.hpp  DoublePendulum.hpp  InertiaTensor.hpp  Integrator.hpp  Layer2Integrator.hpp  Quaternion.hpp  RigidBody.hpp  TwoLinkArm.hpp  World.hpp
rbd-validation-matlab/: simscape_log.csv
rbd-validation-matlab/model/: double_pendulum.slx
rbd-validation-matlab/scripts/: export_validation_data.m  set_common_params.m  validate_engine.m
src/: DataLogger.cpp  InertiaTensor.cpp  Quaternion.cpp  RigidBody.cpp  TwoLinkArm.cpp  World.cpp  main.cpp
